Added player related manager and commands.